data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_434.wast
;; 5. **Test Description**: Define a loop with a `br_table` that indirectly jumps out of the loop based on an out-of-bounds index that leads directly to an `unreachable`.    - **Constraint**: Ensures indirect branching via `br_table` handles index bounds appropriately within loops.    - **Unreachable Code Execution**: Incorrect handling of `br_table` bounds could lead to unintended jumps to `unreachable`.

(assert_invalid
  (module (func $loop-br-table-outrange
    (loop $l (block $b
      (i32.const 1) 
      (block $default
        (br_table $l $default (i32.const 2))
      )
      (unreachable)
    ))
  ))
  "type mismatch or invalid branch"
)